Fix row misalignment when cells have more than one line of text (#11872)
* Fix row misalignment when cells have more than one line of text

* Add border fix only for autoRow size plugin

* Add test cases

* Add changelog entry file

* Add fixes from PR comments

--- a/handsontable/src/styles/base/_base.scss
+++ b/handsontable/src/styles/base/_base.scss
@@ -613,22 +613,24 @@
       }
     }
 
-    .ht_master.innerBorderTop {
-      tbody {
-        tr:first-child {
-          th,
-          td {
-            border-top-width: 0;
-          }
-        }
-      }
-
-      & ~ .ht_clone_inline_start {
+    &.htAutoRowSize {
+      .ht_master.innerBorderTop {
         tbody {
           tr:first-child {
             th,
             td {
               border-top-width: 0;
+            }
+          }
+        }
+  
+        & ~ .ht_clone_inline_start {
+          tbody {
+            tr:first-child {
+              th,
+              td {
+                border-top-width: 0;
+              }
             }
           }
         }
